--- a/pan.itop.vip.conf
+++ b/pan.itop.vip.conf
@@ -42,7 +42,7 @@ server {
     fastcgi_hide_header X-Powered-By;
 
     # Path to the root of your installation
-    root /var/www/nextcloud/;
+    root /var/www/html/;
 
     location = /robots.txt {
         allow all;
