--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -6,7 +6,7 @@ upstream php-handler {
 server {
     listen 80;
     listen [::]:80;
-    server_name pan.itop.vip;
+    server_name _;
     # enforce https
     return 301 https://$server_name$request_uri;
 }
@@ -14,13 +14,13 @@ server {
 server {
     listen 443 ssl http2;
     listen [::]:443 ssl http2;
-    server_name pan.itop.vip;
+    server_name _;
 
     # Use Mozilla's guidelines for SSL/TLS settings
     # https://mozilla.github.io/server-side-tls/ssl-config-generator/
     # NOTE: some settings below might be redundant
-    ssl_certificate /etc/ssl/nginx/pan.itop.vip.crt;
-    ssl_certificate_key /etc/ssl/nginx/pan.itop.vip.key;
+    ssl_certificate /etc/ssl/nginx/tls.crt;
+    ssl_certificate_key /etc/ssl/nginx/tls.key;
 
     # Add headers to serve security related headers
     # Before enabling Strict-Transport-Security headers please read into this
