--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -6,7 +6,7 @@ upstream php-handler {
 server {
     listen 80;
     listen [::]:80;
-    server_name _;
+    server_name pan.itop.vip;
     # enforce https
     return 301 https://$server_name$request_uri;
 }
@@ -14,7 +14,7 @@ server {
 server {
     listen 443 ssl http2;
     listen [::]:443 ssl http2;
-    server_name _;
+    server_name pan.itop.vip;
 
     # Use Mozilla's guidelines for SSL/TLS settings
     # https://mozilla.github.io/server-side-tls/ssl-config-generator/
