--- a/nginx/pan.itop.vip.conf
+++ b/nginx/pan.itop.vip.conf
@@ -19,8 +19,8 @@ server {
     # Use Mozilla's guidelines for SSL/TLS settings
     # https://mozilla.github.io/server-side-tls/ssl-config-generator/
     # NOTE: some settings below might be redundant
-    ssl_certificate /etc/ssl/nginx/tls.crt;
-    ssl_certificate_key /etc/ssl/nginx/tls.key;
+    ssl_certificate /etc/ssl/nginx/pan.itop.vip.crt;
+    ssl_certificate_key /etc/ssl/nginx/pan.itop.vip.key;
 
     # Add headers to serve security related headers
     # Before enabling Strict-Transport-Security headers please read into this
