--- a/supervisord/supervisord.conf
+++ b/supervisord/supervisord.conf
@@ -18,7 +18,7 @@ logfile=/var/log/supervisord.log ; (main log file;default $CWD/supervisord.log)
 ;logfile_backups=10          ; (num of main logfile rotation backups;default 10)
 loglevel=info                ; (log level;default info; others: debug,warn,trace)
 ;pidfile=/run/supervisord.pid ; (supervisord pidfile;default supervisord.pid)
-;nodaemon=false              ; (start in foreground if true;default false)
+nodaemon=true                ; (start in foreground if true;default false)
 ;minfds=1024                 ; (min. avail startup file descriptors;default 1024)
 ;minprocs=200                ; (min. avail process descriptors;default 200)
 ;umask=022                   ; (process file creation umask;default 022)
