--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,18 +1,15 @@
-user  www-data root;
-worker_processes  4;
-daemon off;
+
+user  nginx;
+worker_processes  auto;
 
 error_log  /var/log/nginx/error.log warn;
 pid        /var/run/nginx.pid;
 
-worker_rlimit_nofile 65536;
-
 
 events {
-    use epoll;
-    #multi_accept on;
-    worker_connections  8192;
+    worker_connections  1024;
 }
+
 
 http {
     include       /etc/nginx/mime.types;
