--- a/supervisord/supervisord_fpm.ini
+++ b/supervisord/supervisord_fpm.ini
@@ -1,5 +1,5 @@
 [program:php-fpm]
-command=bash -c "sleep 1 && /usr/local/sbin/php-fpm"  ; the program (relative uses PATH, can take args)
+command=/usr/local/sbin/php-fpm ; the program (relative uses PATH, can take args)
 ;process_name=%(program_name)s ; process_name expr (default %(program_name)s)
 ;numprocs=1                    ; number of processes copies to start (def 1)
 ;directory=/tmp                ; directory to cwd to before exec (def no cwd)
