--- a/nginx/pan.itop.vip.conf
+++ b/nginx/pan.itop.vip.conf
@@ -3,24 +3,25 @@ upstream php-handler {
     server unix:/dev/shm/php-fpm.sock;
 }
 
-server {
-    listen 80;
-    listen [::]:80;
+#server {
+#    listen 80;
+#    listen [::]:80;
     #server_name pan.itop.vip;
     # enforce https
-    return 301 https://$server_name$request_uri;
-}
+#    return 301 https://$server_name$request_uri;
+#}
 
 server {
-    listen 443 ssl http2;
-    listen [::]:443 ssl http2;
+    listen 80;
+#    listen 443 ssl http2;
+#    listen [::]:443 ssl http2;
     #server_name pan.itop.vip;
 
     # Use Mozilla's guidelines for SSL/TLS settings
     # https://mozilla.github.io/server-side-tls/ssl-config-generator/
     # NOTE: some settings below might be redundant
-    ssl_certificate /etc/ssl/nginx/pan.itop.vip.crt;
-    ssl_certificate_key /etc/ssl/nginx/pan.itop.vip.key;
+    #ssl_certificate /etc/ssl/nginx/pan.itop.vip.crt;
+    #ssl_certificate_key /etc/ssl/nginx/pan.itop.vip.key;
 
     # Add headers to serve security related headers
     # Before enabling Strict-Transport-Security headers please read into this
@@ -63,7 +64,7 @@ server {
     }
 
     # set max upload size
-    client_max_body_size 512M;
+    client_max_body_size 8G;
     fastcgi_buffers 64 4K;
 
     # Enable gzip but do not remove ETag headers
