--- a/nginx/pan.itop.vip.conf
+++ b/nginx/pan.itop.vip.conf
@@ -3,19 +3,19 @@ upstream php-handler {
     server unix:/dev/shm/php-fpm.sock;
 }
 
-#server {
-#    listen 80;
-#    listen [::]:80;
-    #server_name pan.itop.vip;
+server {
+    listen 80;
+    listen [::]:80;
+    server_name pan.itop.vip;
     # enforce https
-#    return 301 https://$server_name$request_uri;
-#}
+    return 301 https://$server_name$request_uri;
+}
 
 server {
     listen 80;
-#    listen 443 ssl http2;
-#    listen [::]:443 ssl http2;
-    #server_name pan.itop.vip;
+    listen 443 ssl http2;
+    listen [::]:443 ssl http2;
+    server_name pan.itop.vip;
 
     # Use Mozilla's guidelines for SSL/TLS settings
     # https://mozilla.github.io/server-side-tls/ssl-config-generator/
