--- a/nginx/pan.itop.vip.conf
+++ b/nginx/pan.itop.vip.conf
@@ -16,13 +16,15 @@ server {
     listen 443 ssl http2;
     listen [::]:443 ssl http2;
     server_name pan.itop.vip;
-
+    ssl on;
     # Use Mozilla's guidelines for SSL/TLS settings
     # https://mozilla.github.io/server-side-tls/ssl-config-generator/
     # NOTE: some settings below might be redundant
-    #ssl_certificate /etc/ssl/nginx/pan.itop.vip.crt;
-    #ssl_certificate_key /etc/ssl/nginx/pan.itop.vip.key;
-
+    ssl_certificate /etc/ssl/nginx/2131164_pan.itop.vip.pem;
+    ssl_certificate_key /etc/ssl/nginx/2131164_pan.itop.vip.key;
+    ssl_ciphers ECDHE-RSA-AES128-GCM-SHA256:ECDHE:ECDH:AES:HIGH:!NULL:!aNULL:!MD5:!ADH:!RC4;
+    ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+    ssl_prefer_server_ciphers on;
     # Add headers to serve security related headers
     # Before enabling Strict-Transport-Security headers please read into this
     # topic first.
