--- a/nginx/pan.itop.vip.conf
+++ b/nginx/pan.itop.vip.conf
@@ -16,7 +16,7 @@ server {
     listen 443 ssl http2;
     listen [::]:443 ssl http2;
     server_name pan.itop.vip;
-    ssl on;
+    ssl off;
     # Use Mozilla's guidelines for SSL/TLS settings
     # https://mozilla.github.io/server-side-tls/ssl-config-generator/
     # NOTE: some settings below might be redundant
