--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -6,27 +6,30 @@ upstream php-handler {
 server {
     listen 80;
     listen [::]:80;
-    #server_name pan.itop.vip;
+    #server_name cloud.example.com;
     # enforce https
-    return 301 https://$server_name$request_uri;
+    return 301 https://$server_name:443$request_uri;
 }
 
 server {
     listen 443 ssl http2;
     listen [::]:443 ssl http2;
-    #server_name pan.itop.vip;
+    #server_name cloud.example.com;
+
     # Use Mozilla's guidelines for SSL/TLS settings
     # https://mozilla.github.io/server-side-tls/ssl-config-generator/
     # NOTE: some settings below might be redundant
-    ssl_certificate /etc/ssl/nginx/2131164_pan.itop.vip.pem;
-    ssl_certificate_key /etc/ssl/nginx/2131164_pan.itop.vip.key;
-    ssl_ciphers ECDHE-RSA-AES128-GCM-SHA256:ECDHE:ECDH:AES:HIGH:!NULL:!aNULL:!MD5:!ADH:!RC4;
-    ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
-    ssl_prefer_server_ciphers on;
+    #ssl_certificate /etc/ssl/nginx/cloud.example.com.crt;
+    #ssl_certificate_key /etc/ssl/nginx/cloud.example.com.key;
+
+    #ssl_ciphers ECDHE-RSA-AES128-GCM-SHA256:ECDHE:ECDH:AES:HIGH:!NULL:!aNULL:!MD5:!ADH:!RC4;
+    #ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+    #ssl_prefer_server_ciphers on;
+
     # Add headers to serve security related headers
     # Before enabling Strict-Transport-Security headers please read into this
     # topic first.
-    # add_header Strict-Transport-Security "max-age=15768000; includeSubDomains; preload;";
+    #add_header Strict-Transport-Security "max-age=15768000; includeSubDomains; preload;";
     #
     # WARNING: Only add the preload option once you read about
     # the consequences in https://hstspreload.org/. This option
@@ -38,12 +41,13 @@ server {
     add_header X-Robots-Tag none;
     add_header X-Download-Options noopen;
     add_header X-Permitted-Cross-Domain-Policies none;
+    add_header Referrer-Policy no-referrer;
 
     # Remove X-Powered-By, which is an information leak
     fastcgi_hide_header X-Powered-By;
 
     # Path to the root of your installation
-    root /var/www/html/;
+    root /var/www/nextcloud;
 
     location = /robots.txt {
         allow all;
@@ -56,15 +60,19 @@ server {
     #rewrite ^/.well-known/host-meta /public.php?service=host-meta last;
     #rewrite ^/.well-known/host-meta.json /public.php?service=host-meta-json last;
 
+    # The following rule is only needed for the Social app.
+    # Uncomment it if you're planning to use this app.
+    #rewrite ^/.well-known/webfinger /public.php?service=webfinger last;
+
     location = /.well-known/carddav {
-      return 301 $scheme://$host/remote.php/dav;
+      return 301 $scheme://$host:$server_port/remote.php/dav;
     }
     location = /.well-known/caldav {
-      return 301 $scheme://$host/remote.php/dav;
+      return 301 $scheme://$host:$server_port/remote.php/dav;
     }
 
     # set max upload size
-    client_max_body_size 8G;
+    client_max_body_size 512M;
     fastcgi_buffers 64 4K;
 
     # Enable gzip but do not remove ETag headers
@@ -83,42 +91,43 @@ server {
         rewrite ^ /index.php$request_uri;
     }
 
-    location ~ ^/(?:build|tests|config|lib|3rdparty|templates|data)/ {
+    location ~ ^\/(?:build|tests|config|lib|3rdparty|templates|data)\/ {
         deny all;
     }
-    location ~ ^/(?:\.|autotest|occ|issue|indie|db_|console) {
+    location ~ ^\/(?:\.|autotest|occ|issue|indie|db_|console) {
         deny all;
     }
 
-    location ~ ^/(?:index|remote|public|cron|core/ajax/update|status|ocs/v[12]|updater/.+|ocs-provider/.+)\.php(?:$|/) {
-        fastcgi_split_path_info ^(.+?\.php)(/.*)$;
+    location ~ ^\/(?:index|remote|public|cron|core\/ajax\/update|status|ocs\/v[12]|updater\/.+|oc[ms]-provider\/.+)\.php(?:$|\/) {
+        fastcgi_split_path_info ^(.+?\.php)(\/.*|)$;
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_param PATH_INFO $fastcgi_path_info;
         fastcgi_param HTTPS on;
-        #Avoid sending the security headers twice
+        # Avoid sending the security headers twice
         fastcgi_param modHeadersAvailable true;
+        # Enable pretty urls
         fastcgi_param front_controller_active true;
         fastcgi_pass php-handler;
         fastcgi_intercept_errors on;
         fastcgi_request_buffering off;
     }
 
-    location ~ ^/(?:updater|ocs-provider)(?:$|/) {
+    location ~ ^\/(?:updater|oc[ms]-provider)(?:$|\/) {
         try_files $uri/ =404;
         index index.php;
     }
 
-    # Adding the cache control header for js and css files
+    # Adding the cache control header for js, css and map files
     # Make sure it is BELOW the PHP block
-    location ~ \.(?:css|js|woff|svg|gif)$ {
+    location ~ \.(?:css|js|woff2?|svg|gif|map)$ {
         try_files $uri /index.php$request_uri;
         add_header Cache-Control "public, max-age=15778463";
         # Add headers to serve security related headers (It is intended to
         # have those duplicated to the ones above)
         # Before enabling Strict-Transport-Security headers please read into
         # this topic first.
-        # add_header Strict-Transport-Security "max-age=15768000; includeSubDomains; preload;";
+        #add_header Strict-Transport-Security "max-age=15768000; includeSubDomains; preload;";
         #
         # WARNING: Only add the preload option once you read about
         # the consequences in https://hstspreload.org/. This option
@@ -130,6 +139,8 @@ server {
         add_header X-Robots-Tag none;
         add_header X-Download-Options noopen;
         add_header X-Permitted-Cross-Domain-Policies none;
+        add_header Referrer-Policy no-referrer;
+
         # Optional: Don't log access to assets
         access_log off;
     }
