--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -49,7 +49,7 @@ server {
     fastcgi_hide_header X-Powered-By;
 
     # Path to the root of your installation
-    root /var/www;
+    root /var/www/html;
 
     location = /robots.txt {
         allow all;
