--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -109,7 +109,8 @@ server {
             include fastcgi_params;
             fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
             fastcgi_param PATH_INFO $fastcgi_path_info;
-            fastcgi_param HTTPS on;
+            ###fastcgi_param HTTPS on;
+            fastcgi_param HTTPS $https if_not_empty;
             # Avoid sending the security headers twice
             fastcgi_param modHeadersAvailable true;
             # Enable pretty urls
